Add the action menu to the single view & new style

--- a/style/scss/base/_mixins.scss
+++ b/style/scss/base/_mixins.scss
@@ -308,7 +308,7 @@
   grid-template-areas:
     "label"
     "data-cnt";
-  background-color: $gray-200;
+  @include apply-opacity($primary, 10);
   border-radius: 6px;
   padding: 8px;
 
@@ -320,15 +320,8 @@
       color: $primary;
     }
   }
-   .data-cnt {
+  .data-cnt {
     grid-area: data-cnt;
-    .data-item {
-      div {
-      }
-      display: grid;
-      grid-auto-columns: 1fr;
-      grid-template-columns: 1fr 1fr;
-      gap: 0px 8px;
-    }
+    color: $primary;
   }
 }
