--- a/style/scss/layouts/_singleview.scss
+++ b/style/scss/layouts/_singleview.scss
@@ -1,5 +1,5 @@
 .svw-body {
-  background-color: $gray-100;
+  @include apply-opacity($primary, 10);
   border-radius: 6px;
   padding: 8px;
   display: grid;
@@ -12,7 +12,9 @@
     grid-auto-rows: auto;
     gap: 4px;
     border-radius: 6px;
-    //@include apply-opacity($primary, 10);
+    padding: 4px;
+    border: 1px solid $gray-100;
+    background-color: $gray-100;
 
     .item_custom {
       display: grid;
