--- a/style/moodle.css
+++ b/style/moodle.css
@@ -1297,7 +1297,7 @@ h5 {
 }
 
 .svw-body {
-  background-color: #f8f9fa;
+  background-color: rgba(92, 56, 115, 0.1);
   border-radius: 6px;
   padding: 8px;
   display: grid;
@@ -1310,6 +1310,9 @@ h5 {
   grid-auto-rows: auto;
   gap: 4px;
   border-radius: 6px;
+  padding: 4px;
+  border: 1px solid #f8f9fa;
+  background-color: #f8f9fa;
 }
 .svw-body .svw-cstm_frm .item_custom {
   display: grid;
@@ -1333,7 +1336,7 @@ h5 {
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas: "label" "data-cnt";
-  background-color: #e9ecef;
+  background-color: rgba(92, 56, 115, 0.1);
   border-radius: 6px;
   padding: 8px;
 }
@@ -1346,12 +1349,7 @@ h5 {
 }
 .svw-body .svw-cstm_frm .item_custom .cnt_row1 .col1 .data-cnt {
   grid-area: data-cnt;
-}
-.svw-body .svw-cstm_frm .item_custom .cnt_row1 .col1 .data-cnt .data-item {
-  display: grid;
-  grid-auto-columns: 1fr;
-  grid-template-columns: 1fr 1fr;
-  gap: 0px 8px;
+  color: #5c3873;
 }
 .svw-body .svw-cstm_frm .item_custom .cnt_row1 .col2 {
   display: grid;
@@ -1365,7 +1363,7 @@ h5 {
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas: "label" "data-cnt";
-  background-color: #e9ecef;
+  background-color: rgba(92, 56, 115, 0.1);
   border-radius: 6px;
   padding: 8px;
 }
@@ -1378,12 +1376,7 @@ h5 {
 }
 .svw-body .svw-cstm_frm .item_custom .cnt_row1 .col2 .data-cnt {
   grid-area: data-cnt;
-}
-.svw-body .svw-cstm_frm .item_custom .cnt_row1 .col2 .data-cnt .data-item {
-  display: grid;
-  grid-auto-columns: 1fr;
-  grid-template-columns: 1fr 1fr;
-  gap: 0px 8px;
+  color: #5c3873;
 }
 .svw-body .svw-cstm_frm .item_custom .cnt_row2 {
   display: grid;
@@ -1397,7 +1390,7 @@ h5 {
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas: "label" "data-cnt";
-  background-color: #e9ecef;
+  background-color: rgba(92, 56, 115, 0.1);
   border-radius: 6px;
   padding: 8px;
 }
@@ -1410,12 +1403,7 @@ h5 {
 }
 .svw-body .svw-cstm_frm .item_custom .cnt_row2 .data-cnt {
   grid-area: data-cnt;
-}
-.svw-body .svw-cstm_frm .item_custom .cnt_row2 .data-cnt .data-item {
-  display: grid;
-  grid-auto-columns: 1fr;
-  grid-template-columns: 1fr 1fr;
-  gap: 0px 8px;
+  color: #5c3873;
 }
 .svw-body .svw-cstm_frm .item_custom .cnt_row3 {
   display: grid;
@@ -1429,7 +1417,7 @@ h5 {
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas: "label" "data-cnt";
-  background-color: #e9ecef;
+  background-color: rgba(92, 56, 115, 0.1);
   border-radius: 6px;
   padding: 8px;
 }
@@ -1442,12 +1430,7 @@ h5 {
 }
 .svw-body .svw-cstm_frm .item_custom .cnt_row3 .data-cnt {
   grid-area: data-cnt;
-}
-.svw-body .svw-cstm_frm .item_custom .cnt_row3 .data-cnt .data-item {
-  display: grid;
-  grid-auto-columns: 1fr;
-  grid-template-columns: 1fr 1fr;
-  gap: 0px 8px;
+  color: #5c3873;
 }
 .svw-body .svw-cstm_frm .item_custom .cnt_row4 {
   display: grid;
@@ -1461,7 +1444,7 @@ h5 {
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas: "label" "data-cnt";
-  background-color: #e9ecef;
+  background-color: rgba(92, 56, 115, 0.1);
   border-radius: 6px;
   padding: 8px;
 }
@@ -1474,12 +1457,7 @@ h5 {
 }
 .svw-body .svw-cstm_frm .item_custom .cnt_row4 .data-cnt {
   grid-area: data-cnt;
-}
-.svw-body .svw-cstm_frm .item_custom .cnt_row4 .data-cnt .data-item {
-  display: grid;
-  grid-auto-columns: 1fr;
-  grid-template-columns: 1fr 1fr;
-  gap: 0px 8px;
+  color: #5c3873;
 }
 .svw-body .svw-cstm_frm .item_custom .cnt_row5 {
   display: grid;
@@ -1501,7 +1479,7 @@ h5 {
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas: "label" "data-cnt";
-  background-color: #e9ecef;
+  background-color: rgba(92, 56, 115, 0.1);
   border-radius: 6px;
   padding: 8px;
 }
@@ -1514,12 +1492,7 @@ h5 {
 }
 .svw-body .svw-cstm_frm .item_custom .cnt_row5 .col1 .data-cnt {
   grid-area: data-cnt;
-}
-.svw-body .svw-cstm_frm .item_custom .cnt_row5 .col1 .data-cnt .data-item {
-  display: grid;
-  grid-auto-columns: 1fr;
-  grid-template-columns: 1fr 1fr;
-  gap: 0px 8px;
+  color: #5c3873;
 }
 .svw-body .svw-cstm_frm .item_custom .cnt_row5 .col2 {
   display: grid;
@@ -1533,7 +1506,7 @@ h5 {
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas: "label" "data-cnt";
-  background-color: #e9ecef;
+  background-color: rgba(92, 56, 115, 0.1);
   border-radius: 6px;
   padding: 8px;
 }
@@ -1546,12 +1519,7 @@ h5 {
 }
 .svw-body .svw-cstm_frm .item_custom .cnt_row5 .col2 .data-cnt {
   grid-area: data-cnt;
-}
-.svw-body .svw-cstm_frm .item_custom .cnt_row5 .col2 .data-cnt .data-item {
-  display: grid;
-  grid-auto-columns: 1fr;
-  grid-template-columns: 1fr 1fr;
-  gap: 0px 8px;
+  color: #5c3873;
 }
 .svw-body .svw-cstm_frm .item_custom .cnt_row6 {
   display: grid;
@@ -1565,7 +1533,7 @@ h5 {
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas: "label" "data-cnt";
-  background-color: #e9ecef;
+  background-color: rgba(92, 56, 115, 0.1);
   border-radius: 6px;
   padding: 8px;
 }
@@ -1578,12 +1546,7 @@ h5 {
 }
 .svw-body .svw-cstm_frm .item_custom .cnt_row6 .data-cnt {
   grid-area: data-cnt;
-}
-.svw-body .svw-cstm_frm .item_custom .cnt_row6 .data-cnt .data-item {
-  display: grid;
-  grid-auto-columns: 1fr;
-  grid-template-columns: 1fr 1fr;
-  gap: 0px 8px;
+  color: #5c3873;
 }
 .svw-body .svw-cstm_frm .item_custom .cnt_row7 {
   display: grid;
@@ -1597,7 +1560,7 @@ h5 {
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas: "label" "data-cnt";
-  background-color: #e9ecef;
+  background-color: rgba(92, 56, 115, 0.1);
   border-radius: 6px;
   padding: 8px;
 }
@@ -1610,12 +1573,7 @@ h5 {
 }
 .svw-body .svw-cstm_frm .item_custom .cnt_row7 .data-cnt {
   grid-area: data-cnt;
-}
-.svw-body .svw-cstm_frm .item_custom .cnt_row7 .data-cnt .data-item {
-  display: grid;
-  grid-auto-columns: 1fr;
-  grid-template-columns: 1fr 1fr;
-  gap: 0px 8px;
+  color: #5c3873;
 }
 .svw-body .svw-cstm_frm .item_custom .cnt_row8 {
   display: grid;
@@ -1629,7 +1587,7 @@ h5 {
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas: "label" "data-cnt";
-  background-color: #e9ecef;
+  background-color: rgba(92, 56, 115, 0.1);
   border-radius: 6px;
   padding: 8px;
 }
@@ -1642,12 +1600,7 @@ h5 {
 }
 .svw-body .svw-cstm_frm .item_custom .cnt_row8 .data-cnt {
   grid-area: data-cnt;
-}
-.svw-body .svw-cstm_frm .item_custom .cnt_row8 .data-cnt .data-item {
-  display: grid;
-  grid-auto-columns: 1fr;
-  grid-template-columns: 1fr 1fr;
-  gap: 0px 8px;
+  color: #5c3873;
 }
 .svw-body .svw-cstm_frm .item_custom .cnt_row9 {
   display: grid;
@@ -1661,7 +1614,7 @@ h5 {
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas: "label" "data-cnt";
-  background-color: #e9ecef;
+  background-color: rgba(92, 56, 115, 0.1);
   border-radius: 6px;
   padding: 8px;
 }
@@ -1674,12 +1627,7 @@ h5 {
 }
 .svw-body .svw-cstm_frm .item_custom .cnt_row9 .data-cnt {
   grid-area: data-cnt;
-}
-.svw-body .svw-cstm_frm .item_custom .cnt_row9 .data-cnt .data-item {
-  display: grid;
-  grid-auto-columns: 1fr;
-  grid-template-columns: 1fr 1fr;
-  gap: 0px 8px;
+  color: #5c3873;
 }
 .slst_body {
   width: auto;
@@ -1704,7 +1652,6 @@ h5 {
   color: #5c3873;
   background-color: rgba(92, 56, 115, 0.1);
   padding: 8px;
-  border: 1px solid #fff;
 }
 .slst_body .grid-table-slst .data-item .menubar {
   width: 24px;
