--- a/style/moodle.css
+++ b/style/moodle.css
@@ -1315,8 +1315,6 @@ h5 {
   gap: 4px;
   border-radius: 6px;
   padding: 4px;
-  border: 1px solid #f8f9fa;
-  background-color: #f8f9fa;
 }
 .svw-body .svw-cstm_frm .item_custom {
   display: grid;
@@ -1638,8 +1636,61 @@ h5 {
   height: auto;
 }
 .slst_body .grid-table-slst {
-  display: grid;
-  grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(2, auto);
+  /*
+  @include respond-to("small-phone") {
+    display: grid;
+    grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(
+        2,
+        auto
+      );
+    background-color: rgba(255, 0, 0, 0.151);
+  }
+
+  @include respond-to("phone") {
+    display: grid;
+    grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(
+        2,
+        auto
+      );
+    background-color: rgba(242, 245, 50, 0.164);
+  }
+
+  @include respond-to("tablet") {
+    display: grid;
+    grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(
+        2,
+        auto
+      );
+    background-color: rgba(60, 255, 0, 0.178);
+  }
+
+  @include respond-to("other") {
+    display: grid;
+    grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(
+        2,
+        auto
+      );
+    background-color: rgba(4, 0, 255, 0.158);
+  }
+
+  @include respond-to("large-desktop") {
+    display: grid;
+    grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(
+        2,
+        auto
+      );
+    background-color: rgba(255, 0, 242, 0.151);
+  }
+
+  @include respond-to("custom", 1301px) {
+    display: grid;
+    grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(
+        2,
+        auto
+      );
+    background-color: rgba(255, 0, 0, 0.11);
+  }
+  */
   grid-gap: 2px;
   margin: 0 0 50px;
 }
@@ -1648,11 +1699,7 @@ h5 {
   padding: 8px;
   color: #fff;
   position: sticky;
-  top: 62px;
-}
-.slst_body .grid-table-slst .item-hmxw {
-  background-color: transparent;
-  width: max-content;
+  top: 61px;
 }
 .slst_body .grid-table-slst .data-item {
   color: #5c3873;
@@ -1665,29 +1712,33 @@ h5 {
   width: 24px;
 }
 .slst_body .grid-table-slst .data-item .title_year {
-  padding-right: 8px;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-template-rows: auto;
+  grid-auto-columns: auto;
+  grid-auto-rows: auto;
+  gap: 0px 4px;
+  grid-auto-flow: row;
+  grid-template-areas: "title Year";
 }
-.slst_body .grid-table-slst .data-item .title_year .title_c {
-  width: auto;
-  max-width: 300px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+.slst_body .grid-table-slst .data-item .title_year .title {
+  align-self: start;
+  grid-area: title;
   font-weight: bold;
-  float: left;
 }
-.slst_body .grid-table-slst .data-item .title_year .year_c {
-  float: left;
+.slst_body .grid-table-slst .data-item .title_year .Year {
+  align-self: end;
+  grid-area: Year;
   font-weight: 300;
-  padding-left: 8px;
 }
-.slst_body .grid-table-slst .data-item .description {
+.slst_body .grid-table-slst .data-item .desription {
   clear: both;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  -webkit-line-clamp: 3;
+  width: 100%;
+  height: auto;
+}
+.slst_body .grid-table-slst .item-hmxw {
+  background-color: transparent !important;
+  width: max-content;
 }
 
 .navbar.fixed-top {
