--- a/style/scss/layouts/_listview.scss
+++ b/style/scss/layouts/_listview.scss
@@ -3,11 +3,63 @@
   height: auto;
 
   .grid-table-slst {
-    display: grid;
-    grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(
-        2,
-        auto
-      );
+    //todo
+    /*
+    @include respond-to("small-phone") {
+      display: grid;
+      grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(
+          2,
+          auto
+        );
+      background-color: rgba(255, 0, 0, 0.151);
+    }
+
+    @include respond-to("phone") {
+      display: grid;
+      grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(
+          2,
+          auto
+        );
+      background-color: rgba(242, 245, 50, 0.164);
+    }
+
+    @include respond-to("tablet") {
+      display: grid;
+      grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(
+          2,
+          auto
+        );
+      background-color: rgba(60, 255, 0, 0.178);
+    }
+
+    @include respond-to("other") {
+      display: grid;
+      grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(
+          2,
+          auto
+        );
+      background-color: rgba(4, 0, 255, 0.158);
+    }
+
+    @include respond-to("large-desktop") {
+      display: grid;
+      grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(
+          2,
+          auto
+        );
+      background-color: rgba(255, 0, 242, 0.151);
+    }
+
+    @include respond-to("custom", 1301px) {
+      display: grid;
+      grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(
+          2,
+          auto
+        );
+      background-color: rgba(255, 0, 0, 0.11);
+    }
+    */
+    //todo
     grid-gap: 2px;
     margin: 0 0 50px;
 
@@ -16,13 +68,9 @@
       padding: 8px;
       color: $white;
       position: sticky;
-      top: 62px;
+      top: 61px;
     }
 
-    .item-hmxw {
-      background-color: transparent;
-      width: max-content;
-    }
     .data-item {
       color: $primary;
       font-size: 13px;
@@ -33,32 +81,41 @@
       .menubar {
         width: 24px;
       }
+
       .title_year {
-        padding-right: 8px;
-        .title_c {
-          width: auto;
-          max-width: 300px;
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
+        display: grid;
+        grid-template-columns: auto 1fr;
+        grid-template-rows: auto;
+        grid-auto-columns: auto;
+        grid-auto-rows: auto;
+        gap: 0px 4px;
+        grid-auto-flow: row;
+        grid-template-areas: "title Year";
+
+        .title {
+          align-self: start;
+          grid-area: title;
           font-weight: bold;
-          float: left;
         }
 
-        .year_c {
-          float: left;
+        .Year {
+          align-self: end;
+          grid-area: Year;
           font-weight: 300;
-          padding-left: 8px;
         }
+
       }
-      .description {
+
+      .desription {
         clear: both;
-        display: -webkit-box;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        -webkit-line-clamp: 3;
+        width: 100%;
+        height: auto;
       }
+    }
+
+    .item-hmxw {
+      background-color: transparent !important;
+      width: max-content;
     }
   }
 }
