--- a/style/moodle.css
+++ b/style/moodle.css
@@ -468,6 +468,10 @@ h5 {
   visibility: hidden;
 }
 
+.course_category_tree {
+  display: none;
+}
+
 .custom_form {
   display: grid;
   grid-template-columns: 1fr;
@@ -1635,83 +1639,99 @@ h5 {
   width: auto;
   height: auto;
 }
-.slst_body .grid-table-slst {
+.slst_body .table-card-slst {
+  display: grid;
+  grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(2, auto);
   /*
-  @include respond-to("small-phone") {
-    display: grid;
-    grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(
-        2,
-        auto
-      );
-    background-color: rgba(255, 0, 0, 0.151);
-  }
+      @include respond-to("small-phone") {
+        display: grid;
+        grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(
+            2,
+            auto
+          );
+        background-color: rgba(255, 0, 0, 0.151);
+      }
 
-  @include respond-to("phone") {
-    display: grid;
-    grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(
-        2,
-        auto
-      );
-    background-color: rgba(242, 245, 50, 0.164);
-  }
+      @include respond-to("phone") {
+        display: grid;
+        grid-template-columns: 1fr;
+        .header_item {
+          display: none;
+        }
+        background-color: rgba(242, 245, 50, 0.164);
+      }
+  //todo
+      @include respond-to("tablet") {
+        display: grid;
+        grid-auto-columns: auto;
+        grid-auto-rows: auto;
+        grid-template-columns: 1fr 48px;
+        grid-template-rows: 48px auto;
+        gap: 0px 0px;
+        grid-template-areas:
+          "crd_clps crd_cta"
+          "crd_expnd crd_expnd";
+        background-color: rgba(60, 255, 0, 0.178);
 
-  @include respond-to("tablet") {
-    display: grid;
-    grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(
-        2,
-        auto
-      );
-    background-color: rgba(60, 255, 0, 0.178);
-  }
+        .crd_clps {
+          grid-area: crd_clps;
+        }
+        .crd_cta {
+          grid-area: crd_cta;
+        }
+        .crd_expnd {
+          grid-area: crd_expnd;
+        }
+      }
 
-  @include respond-to("other") {
-    display: grid;
-    grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(
-        2,
-        auto
-      );
-    background-color: rgba(4, 0, 255, 0.158);
-  }
+      @include respond-to("other") {
+        display: grid;
+        grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(
+            2,
+            auto
+          );
+        background-color: rgba(4, 0, 255, 0.158);
+      }
 
-  @include respond-to("large-desktop") {
-    display: grid;
-    grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(
-        2,
-        auto
-      );
-    background-color: rgba(255, 0, 242, 0.151);
-  }
+      @include respond-to("large-desktop") {
+        display: grid;
+        grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(
+            2,
+            auto
+          );
+        background-color: rgba(255, 0, 242, 0.151);
+      }
 
-  @include respond-to("custom", 1301px) {
-    display: grid;
-    grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(
-        2,
-        auto
-      );
-    background-color: rgba(255, 0, 0, 0.11);
-  }
+      @include respond-to("custom", 1301px) {
+        display: grid;
+        grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr repeat(
+            2,
+            auto
+          );
+        background-color: rgba(255, 0, 0, 0.11);
+      }
   */
   grid-gap: 2px;
   margin: 0 0 50px;
 }
-.slst_body .grid-table-slst .header_item {
+.slst_body .table-card-slst .header_item {
   background-color: #5c3873;
   padding: 8px;
   color: #fff;
   position: sticky;
   top: 61px;
 }
-.slst_body .grid-table-slst .data-item {
+.slst_body .table-card-slst .data-item {
   color: #5c3873;
   font-size: 13px;
   background-color: rgba(92, 56, 115, 0.1);
   padding: 8px;
   white-space: normal;
 }
-.slst_body .grid-table-slst .data-item .menubar {
+.slst_body .table-card-slst .data-item .menubar {
   width: 24px;
 }
-.slst_body .grid-table-slst .data-item .title_year {
+.slst_body .table-card-slst .data-item .title_year {
   display: grid;
   grid-template-columns: auto 1fr;
   grid-template-rows: auto;
@@ -1721,22 +1741,22 @@ h5 {
   grid-auto-flow: row;
   grid-template-areas: "title Year";
 }
-.slst_body .grid-table-slst .data-item .title_year .title {
+.slst_body .table-card-slst .data-item .title_year .title {
   align-self: start;
   grid-area: title;
   font-weight: bold;
 }
-.slst_body .grid-table-slst .data-item .title_year .Year {
+.slst_body .table-card-slst .data-item .title_year .Year {
   align-self: end;
   grid-area: Year;
   font-weight: 300;
 }
-.slst_body .grid-table-slst .data-item .desription {
+.slst_body .table-card-slst .data-item .desription {
   clear: both;
   width: 100%;
   height: auto;
 }
-.slst_body .grid-table-slst .item-hmxw {
+.slst_body .table-card-slst .item-hmxw {
   background-color: transparent !important;
   width: max-content;
 }
