--- a/style/scss/moodle.scss
+++ b/style/scss/moodle.scss
@@ -25,6 +25,7 @@
 @import "components/moodle/blocks";
 @import "components/moodle/drawer.scss";
 @import "components/moodle/filemanager";
+@import "components/moodle/advancedsearch";
 
 @import "layouts/layout.scss";
 
