--- a/style/moodle.css
+++ b/style/moodle.css
@@ -5992,6 +5992,114 @@ a.ygtvspacer:hover {
   display: none;
 }
 
+.boxaligncenter {
+  width: 80% !important;
+  display: grid;
+}
+.boxaligncenter tbody {
+  color: #5c3873;
+  font-size: 13px;
+  background-color: #f3eff5;
+  padding-bottom: 16px;
+  border: 1px solid #5c3873;
+}
+.boxaligncenter tbody tr:first-child {
+  height: 0px !important;
+  padding: 0px !important;
+  line-height: 0 !important;
+}
+.boxaligncenter tbody tr:first-child td {
+  border: none;
+  padding: 0;
+}
+.boxaligncenter tbody tr td {
+  border: none;
+}
+.boxaligncenter tbody tr td .advancesearch {
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: auto;
+  gap: 0 20px;
+  width: auto;
+  padding: 8px 16px;
+}
+.boxaligncenter tbody tr td .advancesearch .col1 {
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-auto-rows: auto;
+  gap: 10px 0;
+}
+.boxaligncenter tbody tr td .advancesearch .col1 .item1 {
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-auto-rows: auto;
+  gap: 2px;
+}
+.boxaligncenter tbody tr td .advancesearch .col1 .item1 select {
+  width: 100%;
+  border: 1px solid #5c3873;
+  border-radius: 0;
+  align-content: left;
+  background-color: #f3eff5;
+}
+.boxaligncenter tbody tr td .advancesearch .col1 .item2 {
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-auto-rows: auto;
+  gap: 2px;
+}
+.boxaligncenter tbody tr td .advancesearch .col1 .item2 .template-token {
+  width: 100%;
+  border: 1px solid #5c3873;
+  border-radius: 0;
+  align-content: left;
+  background-color: #f3eff5;
+  padding: 8px 10px;
+}
+.boxaligncenter tbody tr td .advancesearch .col2 {
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-auto-rows: auto;
+  gap: 10px 0;
+  height: 65%;
+}
+.boxaligncenter tbody tr td .advancesearch .col2 .item1,
+.boxaligncenter tbody tr td .advancesearch .col2 .item4 {
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-auto-rows: auto;
+}
+.boxaligncenter tbody tr td .advancesearch .col2 .item1 input,
+.boxaligncenter tbody tr td .advancesearch .col2 .item4 input {
+  width: 100%;
+  border: 1px solid #5c3873;
+  border-radius: 0;
+  align-content: left;
+  background-color: #f3eff5;
+}
+.boxaligncenter tbody tr td .advancesearch .col2 .item2,
+.boxaligncenter tbody tr td .advancesearch .col2 .item3 {
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-auto-rows: auto;
+}
+.boxaligncenter tbody tr td .advancesearch .col2 .item2 select,
+.boxaligncenter tbody tr td .advancesearch .col2 .item3 select {
+  width: 100%;
+  border: 1px solid #5c3873;
+  border-radius: 0;
+  align-content: left;
+  background-color: #f3eff5;
+}
+.boxaligncenter tbody tr td .advancesearch .col2 .item5 .template-token .form-inline select {
+  margin-right: 4px;
+}
+.boxaligncenter tbody tr td .btn {
+  margin: 0 8px;
+  float: right;
+}
+
 .layout.fullscreen {
   background-color: #f3eff5;
 }
