--- a/style/scss/components/moodle/_advancedsearch.scss
+++ b/style/scss/components/moodle/_advancedsearch.scss
@@ -1,24 +1,3 @@
-@mixin col-style {
-  display: grid;
-  grid-auto-columns: 1fr;
-  grid-auto-rows: auto;
-  gap: 10px 0;
-}
-
-@mixin item-style {
-  display: grid;
-  grid-auto-columns: 1fr;
-  grid-auto-rows: auto;
-}
-
-@mixin content-style {
-  width: 100%;
-  border: 1px solid $FOS-Aubergine;
-  border-radius: 0;
-  align-content: left;
-  background-color: $body-bg;
-}
-
 .boxaligncenter {
   width: 80% !important;
   display: grid;
@@ -28,7 +7,6 @@
     font-size: 13px;
     background-color: $body-bg;
     padding-bottom: 16px;
-    border: 1px solid $primary;
 
     tr {
       &:first-child {
@@ -98,6 +76,11 @@
             .item5 {
               .template-token {
                 .form-inline {
+                  display: flex;
+                  flex-flow: row wrap;
+                  width: 60%;
+                  align-items: center;
+                  gap: 5px 5px;
                   select {
                     margin-right: 4px;
                   }
@@ -109,6 +92,9 @@
         .btn {
           margin: 0 8px;
           float: right;
+          .btn-primary {
+            margin-right: 36px !important;
+        }
         }
       }
     }
