--- a/style/moodle.css
+++ b/style/moodle.css
@@ -6152,7 +6152,7 @@ a.ygtvspacer:hover {
   margin: 0 8px;
   float: right;
 }
-.boxaligncenter tbody tr td .btn .btn-primary {
+.boxaligncenter tbody tr td .btn .mr-1 {
   margin-right: 36px !important;
 }
 
