--- a/style/scss/components/moodle/_advancedsearch.scss
+++ b/style/scss/components/moodle/_advancedsearch.scss
@@ -92,7 +92,7 @@
         .btn {
           margin: 0 8px;
           float: right;
-          .btn-primary {
+          .mr-1 {
             margin-right: 36px !important;
         }
         }
