--- a/style/scss/components/moodle/_advancedsearch.scss
+++ b/style/scss/components/moodle/_advancedsearch.scss
@@ -90,9 +90,9 @@
           }
         }
         .btn {
-          margin: 0 8px;
+          /*margin: 0 8px;*/
           float: right;
-          .mr-1 {
+          .btn-primary.mr-1  {
             margin-right: 36px !important;
         }
         }
