--- a/style/moodle.css
+++ b/style/moodle.css
@@ -6149,10 +6149,10 @@ a.ygtvspacer:hover {
   margin-right: 4px;
 }
 .boxaligncenter tbody tr td .btn {
-  /*margin: 0 8px;*/
+  margin: 0 8px;
   float: right;
 }
-.boxaligncenter tbody tr td .btn .btn-primary.mr-1 {
+.boxaligncenter tbody tr td .btn-primary {
   margin-right: 36px !important;
 }
 
