--- a/style/moodle.css
+++ b/style/moodle.css
@@ -6046,7 +6046,7 @@ a.ygtvspacer:hover {
 .boxaligncenter tbody {
   color: #5c3873;
   font-size: 13px;
-  background-color: #f3eff5;
+  background-color: rgba(92, 56, 115, 0.1);
   padding-bottom: 16px;
 }
 .boxaligncenter tbody tr:first-child {
