--- a/style/moodle.css
+++ b/style/moodle.css
@@ -6047,6 +6047,7 @@ a.ygtvspacer:hover {
   color: #5c3873;
   font-size: 13px;
   background-color: rgba(92, 56, 115, 0.1);
+  background-color: rgba(92, 56, 115, 0.1);
   padding-bottom: 16px;
 }
 .boxaligncenter tbody tr:first-child {
