--- a/style/moodle.css
+++ b/style/moodle.css
@@ -6140,10 +6140,10 @@ a.ygtvspacer:hover {
   background-color: #f3eff5;
 }
 .boxaligncenter tbody tr td .advancesearch .col2 .item5 .template-token .form-inline {
-  display: flex;
+  /*display: flex;
   flex-flow: row wrap;
   width: 60%;
-  align-items: center;
+  align-items: center;*/
   gap: 5px 5px;
 }
 .boxaligncenter tbody tr td .advancesearch .col2 .item5 .template-token .form-inline select {
