--- a/style/scss/components/moodle/_advancedsearch.scss
+++ b/style/scss/components/moodle/_advancedsearch.scss
@@ -77,10 +77,10 @@
             .item5 {
               .template-token {
                 .form-inline {
-                  display: flex;
+                  /*display: flex;
                   flex-flow: row wrap;
                   width: 60%;
-                  align-items: center;
+                  align-items: center;*/
                   gap: 5px 5px;
                   select {
                     margin-right: 4px;
