--- a/style/moodle.css
+++ b/style/moodle.css
@@ -656,6 +656,7 @@ h5 {
   visibility: hidden;
   height: 0;
   display: none !important;
+  padding: 7px;
 }
 .custom_form .item_custom .cnt_row2 .value div .mod-data-input > div:first-child .editor_atto .editor_atto_content_wrap {
   width: 100% !important;
@@ -1639,7 +1640,7 @@ h5 {
 }
 .slst_body .table-card-slst {
   display: grid;
-  grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr 110px auto;
+  grid-template-columns: repeat(2, auto) minmax(100px, 390px) 1fr 128px auto;
   /*
       @include respond-to("small-phone") {
         display: grid;
@@ -1718,6 +1719,7 @@ h5 {
   color: #fff;
   position: sticky;
   top: 61px;
+  font-weight: 600;
 }
 .slst_body .table-card-slst .data-item {
   color: #5c3873;
@@ -6040,7 +6042,7 @@ a.ygtvspacer:hover {
 }
 
 .boxaligncenter {
-  width: 80% !important;
+  width: 83% !important;
   display: grid;
 }
 .boxaligncenter tbody {
