--- a/style/scss/moodle.scss
+++ b/style/scss/moodle.scss
@@ -212,7 +212,10 @@ body {
     }
 
     .main-inner {
-      background-color: $body-bg;
+      background-color: $body-bg;    
+      padding: 0 .5rem 1.5rem !important;
+      max-width: 1320px !important;
+  
     }
 
     #region-main {
