--- a/style/scss/moodle.scss
+++ b/style/scss/moodle.scss
@@ -216,8 +216,18 @@ body {
       background-color: $body-bg;    
       padding: 0 .5rem 1.5rem !important;
       max-width: 1320px !important;
-  
+      .header-maxwidth {
+        max-width: 100%;
     }
+
+    }
+
+    div.grid-category {
+      padding: 0 .5rem 1.5rem !important;
+      max-width: 1320px !important;
+      width: 100%;
+  }
+
 
     #region-main {
       background-color: $body-bg;
