--- a/templates/coursecategory.mustache
+++ b/templates/coursecategory.mustache
@@ -24,10 +24,16 @@
                         <span><a href="{{{config.wwwroot}}}/mod/forum/view.php?id={{{modules.forum}}}">{{#str}}Community, theme_fos_space1{{/str}}</a></span>
                     </button>
                 </div>
-                <div class="cta-right">
+                <div class="cta-middle">
                     <button class="btn_icon-fos">
                         <div class="icon-lab"></div>
                         <span><a href="{{{config.wwwroot}}}/mod/data/view.php?id={{{modules.data}}}">{{#str}}KnowledgeSharing, theme_fos_space1{{/str}}</a></span>
+                    </button>
+                </div>
+                <div class="cta-right">
+                    <button class="btn_icon-fos">
+                        <div class="icon-blog"></div>
+                        <span><a href="{{{config.wwwroot}}}/mod/forum/view.php?id={{{modules.forum}}}">{{#str}}Documentation, theme_fos_space1{{/str}}</a></span>
                     </button>
                 </div>
             </div>
